--- a/notes.org
+++ b/notes.org
@@ -8,7 +8,8 @@ intéressée, il y a bien évidemment matière à élaborer.
 
 Pour vous, par contre, je me suis coupé en quatres car je suis parti
 du principe que si vous êtes là, ce que vous voulez, en effet, savoir
-...TITLE ...
+*faire du sens avec un nombre incroyable de données* grâce à la
+bio-informatique.
 
 
 Pour répondre à cette question, j'ai décidé de l'aborder sous
