--- a/slides.Rmd
+++ b/slides.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "TITLE"
-subtitle: "subtitle"
+title: "Faire du sens avec un nombre incroyable de données"
+subtitle: ""
 author: "Laurent Gatto"
 date: "2022/02/17"
 output:
