--- a/notes.org
+++ b/notes.org
@@ -1,10 +1,11 @@
 Quand on me demande ce que je fais et que je réponds de la
 bio-informatique, je précise toujours (et c'est devenu un réflexe) que
-c'est de l'informatique appliquée à de la biologie. Et je dois vous
-avouer que ce n'est pas avec grande conviction, car je ne m'attends
-pas que cette définition soit des plus instructive... mais elle a le
-mérite d'être courte. Si vraiment la personne qui la pose est
-intéressée, il y a bien évidemment matière à élaborer.
+c'est de l'informatique appliquée à de la biologie, y compris la
+médecine. Et je dois vous avouer que ce n'est pas avec grande
+conviction, car je ne m'attends pas que cette définition soit des plus
+instructive... mais elle a le mérite d'être courte. Si vraiment la
+personne qui la pose est intéressée, il y a bien évidemment matière à
+élaborer.
 
 Pour vous, par contre, je me suis coupé en quatres car je suis parti
 du principe que si vous êtes là, ce que vous voulez, en effet, savoir
