--- a/slides.Rmd
+++ b/slides.Rmd
@@ -30,7 +30,7 @@ xaringanExtra::use_extra_styles(
 class: middle
 name: cc-by
 
-### Get the slides at [http://bit.ly/202203uda](http://bit.ly/202203uda)
+### Get the slides at [http://bit.ly/202202uda](http://bit.ly/202202uda)
 
 These slides are available under a **creative common
 [CC-BY license](http://creativecommons.org/licenses/by/4.0/)**. You are
@@ -46,6 +46,7 @@ class: middle, center, inverse
 # Qu'est-ce que la bioinformatique?
 
 ---
+class: middle
 
 - Pourquoi la bio-informatique?
 - Qu'est-ce que la bioinformatique?
@@ -54,31 +55,68 @@ class: middle, center, inverse
 - Quelques exemples d'algorithmes utilisés en bio-informatique.
 - ... et quelques illustrations.
 
-
 ---
 class: middle, center, inverse
 
 # Pourquoi la bio-informatique?
 
-
 ---
+
+Figure of a cell (left) and central dogma (right)
 
 - Central dogma and information flow
 - transmission de l'information moĺéculaire
-- nous avons les outils technologiques pour mesurer les molécules à
-  chaque niveau biologique
+- also mention metabolites
 
+---
+
+Nous avons les outils technologiques pour mesurer les molécules chaque
+niveau biologique
+- ADN/Génome -> génomique
+- ARN/Transciption -> transcriptomique
+- Protéines/protéome -> protéomique
+- Métabolites/métabolome -> métabolomique
+
+---
+
+Pourquoi est-ce si important?
+
+- Réassembler les données et *comprendre* certaines facettes de la
+  biologie sous-jacente
+- L'utilisation d'algorithmes dans les prises de décisions, par
+  exemple dans la détection de tumeurs.
+
+---
+
+Figure *'Les algorithmes font-ils la loi?* and aide à la décision en
+recherche (bio-)médecale.
 
 ---
 class: middle, center, inverse
 
 # Qui fait de la bio-informatique?
 
-## (dans l'unité *Computational Biology and Bioinformatics* à l'institut de Duve)
+### (dans l'unité *Computational Biology and Bioinformatics* à l'institut de Duve)
 
 ---
+class: middle, center
+background-image: url("https://camo.githubusercontent.com/d6c09dad4c8e5eba45b8b5d727bf51429cc273dc0d90db2d80266cf259431530/68747470733a2f2f6c676174746f2e6769746875622e696f2f696d616765732f4342494f2d32303231303930382e6a7067")
+background-size: contain
 
-Add a picture of the group and names
+---
+class: middle, center, inverse
+
+# Où enseigne-t-on la bio-informatique?
+
+### (à l'UCLouvain)
+
+---
+class: middle
+
+- Faculté de pharmacie et sciences biomédicales
+- Faculté des sciences
+- Ecole Polytechnique de Louvain
+- Ecole de statistique (statistques et sciences des données)
 
 ---
 class: middle, center, inverse
@@ -88,16 +126,11 @@ class: middle, center, inverse
 ---
 class: middle, center, inverse
 
-# Où enseigne-t-on la bio-informatique?
-
-## (à l'UCLouvain)
+# Les données omiques
 
 ---
 
-- Faculté de pharmacie et sciences biomédicales (SBIM)
-- Ecole Polytechnique de Louvain (EPL)
-- Ecole de statistique (statistiques et sciences des données)
-
+Illustration with Legos
 
 ---
 class: middle, center, inverse
@@ -107,9 +140,24 @@ class: middle, center, inverse
 ## (le plat de consistence)
 
 ---
+
+- Hypothesis testing
+- Dimensionality reduction
+- Unsupervised learning: clustering
+- Supervised learning: classificatino
+
+---
 class: middle, center, inverse
 
-# Illustrations
+# Illustration: protéomique spatiale
+
+---
+
+- Figure of cell to explain spatial proteomics
+- Protocol ? Mention de Duve's density gradient.
+- Show quantitative matrix with annotations
+- Reminder of algorithms
+- Show PCA and some results
 
 ---
 class: middle, center, inverse
