--- a/slides.Rmd
+++ b/slides.Rmd
@@ -43,17 +43,17 @@ any purpose, even commercially
 ---
 class: middle, center, inverse
 
-# Qu'est-ce que la bioinformatique?
+# Qu'est-ce que la bio-informatique?
 
 ---
 class: middle
 
-- Qu'est-ce que la bioinformatique?
+- Qu'est-ce que la bio-informatique?
 - Pourquoi la bio-informatique?
 - Qui fait de la bio-informatique?
 - Où enseigne-t-on la bio-informatique?
 - Quelques exemples d'algorithmes utilisés en bio-informatique.
-- ... et quelques illustrations.
+- La protéomique spatiale.
 
 ---
 class: middle, center, inverse
@@ -61,13 +61,16 @@ class: middle, center, inverse
 # Pourquoi la bio-informatique?
 
 ---
-class: center, middle
+class: middle
 
 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/48/Animal_cell_structure_en.svg/1280px-Animal_cell_structure_en.svg.png" width="500"> <img src="https://uclouvain-cbio.github.io/WSBIM1207/figs/Centraldogma_nodetails.png" width="500">
 
-
+Credit: Wikipedia
 ---
 class: middle
+
+
+.pull-left[
 
 Nous avons les outils technologiques pour mesurer les molécules chaque
 niveau biologique
@@ -76,25 +79,50 @@ niveau biologique
 - Protéines/protéome (1e6 protéoformes) -> **protéomique**
 - Métabolites/métabolome (1e5 métabolites) -> **métabolomique**
 
-**Technologies omiques**... que faire avec toutes ces données
+### **Technologies omiques**... que faire avec toutes ces données?
+
+]
+
+.pull-right[
+
+![dogma](https://uclouvain-cbio.github.io/WSBIM1207/figs/Centraldogma_nodetails.png)
+
+]
+
 
 ---
 class: middle
 
-**Technologies omiques**... que faire avec toutes ces données... de la
-**bio-informatique**
 
-- Réassembler les données et *comprendre* certaines facettes de la
-  biologie sous-jacente
+
+.pull-left[
+
+Nous avons les outils technologiques pour mesurer les molécules chaque
+niveau biologique
+- ADN/Génome (1e9 de paires de bases, 20000 gènes) -> **génomique**
+- ARN/Transciption (50000 transcrits) -> **transcriptomique**
+- Protéines/protéome (1e6 protéoformes) -> **protéomique**
+- Métabolites/métabolome (1e5 métabolites) -> **métabolomique**
+
+### **Technologies omiques**... que faire avec toutes ces données ...
+
+]
+
+.pull-right[
+
+### ... de la **bio-informatique**!
+
+- Ré-assembler les données pour **comprendre** certaines facettes de
+  la biologie sous-jacente
 - L'utilisation d'algorithmes dans les prises de décisions, par
   exemple dans la détection de tumeurs.
+
+]
 
 ---
 class: middle, inverse
 
 .pull-left[
-
-
 
 ### Les algorithmes n'ont bien évidemment pas vocation à replacer les médecins!
 
@@ -243,15 +271,50 @@ class: center, middle
 
 <img src="./figs/spatprotdata.png" width="800">
 
----
 
-- Figure of cell to explain spatial proteomics
-- Protocol ? Mention de Duve's density gradient.
-- Show quantitative matrix with annotations
-- Reminder of algorithms
-- Show PCA and some results
+
+---
+class: center, middle
+
+## Réduction de dimensions
+
+<img src="./figs/spatprot-pca.png" width="500">
+
+---
+class: center, middle
+
+## Clustering
+
+<img src="./figs/spatprot-pca.png" width="500">
+
+---
+class: center, middle
+
+## Classification
+
+<img src="./figs/spatprot-class.png" width="500">
+
+---
+class: center, middle
+
+## Classification
+
+<img src="./figs/spatprot-class2.png" width="500">
+
+---
+class: center, middle
+
+## Modélisation probabilistique
+
+<img src="./figs/spatprot-prob.png" width="500">
+
+
+---
+class: center, middle, inverse
+
+# Bio-informatique: informatique appliquée à de la biologie/médecine.
 
 ---
 class: middle, center, inverse
 
-# Questions
+# Questions?
