--- a/slides.Rmd
+++ b/slides.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Faire du sens avec un nombre incroyable de données"
 subtitle: ""
-author: "Prof. Laurent Gatto"
+author: "Prof. Laurent Gatto - Institut de Duve"
 date: "17 février 2022"
 output:
   xaringan::moon_reader:
