--- a/slides.Rmd
+++ b/slides.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Faire du sens avec un nombre incroyable de données"
 subtitle: ""
-author: "Prof. Laurent Gatto - Institut de Duve"
+author: "Prof. Laurent Gatto - Institut de Duve, UCLouvain"
 date: "17 février 2022"
 output:
   xaringan::moon_reader:
@@ -63,9 +63,21 @@ class: middle, center, inverse
 ---
 class: middle
 
-<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/48/Animal_cell_structure_en.svg/1280px-Animal_cell_structure_en.svg.png" width="500"> <img src="https://uclouvain-cbio.github.io/WSBIM1207/figs/Centraldogma_nodetails.png" width="500">
+.pull-left[
+
+![cell](https://upload.wikimedia.org/wikipedia/commons/thumb/4/48/Animal_cell_structure_en.svg/1280px-Animal_cell_structure_en.svg.png)
+
+]
+
+.pull-right[
+
+![dogma](https://uclouvain-cbio.github.io/WSBIM1207/figs/Centraldogma_nodetails.png)
+
+]
+
 
 Credit: Wikipedia
+
 ---
 class: middle
 
@@ -375,6 +387,8 @@ class: center, middle
 class: center, middle, inverse
 
 # Bio-informatique: informatique appliquée à de la biologie/médecine.
+
+I <svg viewBox="0 0 512 512" style="position:relative;display:inline-block;top:.1em;fill:red;height:2em;" xmlns="http://www.w3.org/2000/svg"> <path d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z"></path> </svg> bioinformatics
 
 ---
 class: middle, center, inverse
