--- a/slides.Rmd
+++ b/slides.Rmd
@@ -136,7 +136,7 @@ class: middle, inverse
 
 .pull-left[
 
-### Les algorithmes n'ont bien évidemment pas vocation à replacer les médecins!
+### Les algorithmes n'ont bien évidemment pas vocation à remplacer les médecins!
 
 ### Prédire n’est pas comprendre!
 
