--- a/slides.Rmd
+++ b/slides.Rmd
@@ -48,12 +48,13 @@ class: middle, center, inverse
 ---
 class: middle
 
-- Qu'est-ce que la bio-informatique?
+### Qu'est-ce que la bio-informatique?
+
 - Pourquoi la bio-informatique?
 - Qui fait de la bio-informatique?
 - Où enseigne-t-on la bio-informatique?
 - Quelques exemples d'algorithmes utilisés en bio-informatique.
-- La protéomique spatiale.
+- Illustration: la protéomique spatiale.
 
 ---
 class: middle, center, inverse
@@ -567,3 +568,6 @@ I <svg viewBox="0 0 512 512" style="position:relative;display:inline-block;top:.
 class: middle, center, inverse
 
 # Questions?
+
+
+Slides: [http://bit.ly/202202uda](http://bit.ly/202202uda)
