--- a/slides.Rmd
+++ b/slides.Rmd
@@ -87,7 +87,8 @@ class: middle
 
 Nous avons les outils technologiques pour mesurer les molécules chaque
 niveau biologique
-- ADN/Génome (3e9 de paires de bases, 20000 gènes) -> **génomique**
+- ADN/Génome (3e9 de paires de bases, 20000 gènes) ->
+  **génomique**/**génétique**
 - ARN/Transciption (50000 transcrits) -> **transcriptomique**
 - Protéines/protéome (1e6 protéoformes) -> **protéomique**
 - Métabolites/métabolome (1e5 métabolites) -> **métabolomique**
@@ -124,8 +125,9 @@ niveau biologique
 
 - Ré-assembler les données pour **comprendre** certaines facettes de
   la biologie sous-jacente.
-- L'utilisation d'algorithmes dans les prises de décisions, par
-  exemple dans la caractérisation ou détection de tumeurs.
+- L'utilisation d'**algorithmes** dans les prises de décisions, par
+  exemple dans la caractérisation, le traitement ou détection de
+  tumeurs.
 
 ]
 
@@ -170,10 +172,11 @@ class: middle, center, inverse
 ---
 class: middle
 
-- Faculté de pharmacie et sciences bio-médicales
-- Faculté des sciences
-- Ecole Polytechnique de Louvain
-- Ecole de statistique (statistques et sciences des données)
+- Faculté de pharmacie et sciences bio-médicales (FASB, Woluwé)
+- Ecole Polytechnique de Louvain (EPL, LLN)
+- Ecole de biologie (LLN)
+- Ecole de Statistique, Biostatistique et Sciences Actuarielles (LSBA,
+  LLN)
 
 ---
 class: middle, center, inverse
@@ -288,6 +291,23 @@ class:middle, center
 
 .pull-right[
 
+## 4 échantillons dans 5 dimensions
+
+## Comment explorer/comprendre ces données multidimensionnelles?
+
+]
+
+---
+class:middle, center
+
+.pull-left[
+
+![data2](figs/data2.png)
+
+]
+
+.pull-right[
+
 ![pca 1](figs/pca1.png)
 
 ]
@@ -295,7 +315,7 @@ class:middle, center
 ---
 class:middle, center
 
-## Analyse en composantes principales
+## Analyse en composantes principales (APC)
 
 .pull-left[
 
@@ -327,6 +347,23 @@ class: middle
 .pull-right[
 
 ## Quels sont les échantillons qui se ressemblent le plus?
+
+]
+
+---
+class: middle
+
+.pull-left[
+
+![data2](figs/data2.png)
+
+]
+
+.pull-right[
+
+## Quels sont les échantillons qui se ressemblent le plus?
+
+# A votre avis?
 
 ]
 
@@ -456,7 +493,25 @@ class:middle
 
 .pull-right[
 
-## Est-ce que celui-ci est un *jaune*, un *vert*, un *noir* ou un *blue*?
+## Est-ce que celui-ci est un *jaune*, un *vert*, un *noir* ou un *bleu*?
+
+# A votre avis?
+
+]
+
+---
+class:middle
+
+.pull-left[
+
+<img src="figs/data2.png" width="350">
+<img src="figs/data_new.png" width="145">
+
+]
+
+.pull-right[
+
+## Est-ce que celui-ci est un *jaune*, un *vert*, un *noir* ou un *bleu*?
 
 ## Méthode des/du plus proche voisin(s): *k-NN*
 
@@ -562,7 +617,7 @@ class: center, middle, inverse
 I <svg viewBox="0 0 512 512" style="position:relative;display:inline-block;top:.1em;fill:red;height:2em;" xmlns="http://www.w3.org/2000/svg"> <path d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z"></path> </svg> bioinformatics
 
 ---
-class: middle, center, inverse
+class: middle, center
 
 # Questions?
 
