--- a/notes.org
+++ b/notes.org
@@ -5,9 +5,9 @@
   devenu un réflexe) que c'est de l'informatique appliquée aux
   sciences bio-médicales. Et je dois vous avouer que ce n'est pas avec
   grande conviction, car je suis bien conscient que cette définition
-  soit des plus instructive... mais elle a le mérite d'être courte. Si
-  vraiment la personne qui la pose est intéressée, il y a bien
-  évidemment matière à élaborer.
+  ne soit pas des plus instructive... mais elle a le mérite d'être
+  courte. Si vraiment la personne qui la pose est intéressée, il y a
+  bien évidemment matière à élaborer.
 
   Pour vous, par contre, je me suis coupé en quatres car je suis parti
   du principe que si vous êtes là, ce que vous voulez, en effet,
